--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -24,3 +24,10 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --file pom.xml
+    - name: copy to staging
+      run: mkdir staging && cp target/*.jar staging
+    - name: upload
+      uses: actions/upload-artifact@v2
+      with:
+        name: Package
+        path: staging
